RESOLVED FIXED15252
REGRESSION: <select multiple> doesn't scroll to top when old options are removed and new ones are added, leaving listbox empty-looking
https://bugs.webkit.org/show_bug.cgi?id=15252
Summary REGRESSION: <select multiple> doesn't scroll to top when old options are remo...
Adam Roben (:aroben)
Reported 2007-09-21 13:44:56 PDT
If you have a <select multiple> that is scrolled down, then remove all its <option>s, then add some new options, the listbox won't scroll back up to the top, which leaves the listbox empty-looking. If you then scroll with the mousewheel the new options pop into view.
Attachments
testcase (1.59 KB, text/html)
2007-09-21 13:46 PDT, Adam Roben (:aroben)
no flags
Adam Roben (:aroben)
Comment 1 2007-09-21 13:46:40 PDT
Created attachment 16343 [details] testcase
Dave Hyatt
Comment 2 2007-09-21 14:20:19 PDT
This is a regression from Safari 2.
Dave Hyatt
Comment 3 2007-09-21 14:26:12 PDT
John Sullivan
Comment 4 2007-09-21 14:35:33 PDT
Do we have any real-world examples of this?
Adele Peterson
Comment 5 2007-10-15 11:50:52 PDT
Committed revision 26614.
Note You need to log in before you can comment on or make changes to this bug.