WebCore:

Reviewed by Darin.

        Fix for http://bugs.webkit.org/show_bug.cgi?id=15252
        <rdar://problem/5498184> REGRESSION: <select multiple> doesn't scroll to top when old options are removed and new ones are added, leaving listbox empty-looking

        * rendering/RenderListBox.cpp: (WebCore::RenderListBox::calcHeight): If the scrollbar is disabled, make sure the scroll offset gets reset to 0.  In general,
          we don't want to unnecessarily adjust the scroll offset, but in this case, there won't be an obvious way for the user to adjust the scroller position once it's disabled.

LayoutTests:

        Reviewed by Darin.

        Test for http://bugs.webkit.org/show_bug.cgi?id=15252
        <rdar://problem/5498184> REGRESSION: <select multiple> doesn't scroll to top when old options are removed and new ones are added, leaving listbox empty-looking

        * fast/forms/listbox-scroll-after-options-removed-expected.txt: Added.
        * fast/forms/listbox-scroll-after-options-removed.html: Added.



Canonical link: https://commits.webkit.org/20589@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@26614 268f45cc-cd09-0410-ab3c-d52691b4dbfc